--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -593,8 +593,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 col-md-12">
-                            <h1 class="display-5 fw-bold">Plan Suit to Your Business</h1>
-                            <p class="lead">Choose the pricing plan that fits your business needs and budget</p>
+                            <h1 class="display-5 fw-bold">Plans that Suit to Your Business - Startup or Enterprise</h1>
+                            <p class="lead">Choose the plan that fits your business needs and Lets jointly workout the price</p>
                         </div>
                     </div>
                     <div class="bg-circle rounded-circle circle-shape-3 position-absolute bg-dark-light right-5"></div>
@@ -608,9 +608,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-10">
                     <div class="section-heading text-center">
-                        <h2>Check Our Valuable Price</h2>
-                        <p>Choose your path to Accelerated Success
-                            order the plan cards </p>
+                        <h2>Check Our Valuable Plans</h2>
                     </div>
                 </div>
             </div>
@@ -631,9 +629,9 @@
                                     <div
                                         class="position-relative single-pricing-wrap rounded-custom bg-white custom-shadow p-5 mb-4 mb-lg-0">
                                         <div class="pricing-header mb-32">
-                                            <h3 class="package-name text-primary d-block">Business Basic </h3>
+                                            <h3 class="package-name text-primary d-block">Business Basic</h3>
                                             <!-- <h4 class="display-6 fw-semi-bold">$99<span>/month**</span></h4> -->
-                                            <span>Get Started Quickly with Essential Features.</span>
+                                            <span>Get Started Quickly with Essential Features. Suitable for Startups</span>
 
                                         </div>
                                         <div class="pricing-info mb-4">
@@ -642,8 +640,6 @@
                                                     Environment </li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> 5 Users
                                                 </li>
-                                                <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> Agile
-                                                    Project Delivery Management</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> 1 Cloud
                                                     Subscription</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> 1 Code
@@ -654,12 +650,6 @@
                                                     Environment provisioning</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> Email
                                                     Alerts</li>
-                                                <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> IT
-                                                    Service Management</li>
-
-
-
-
                                             </ul>
                                         </div>
                                         <a href="request-demo.html" class="btn btn-outline-primary mt-2">Get Started</a>
@@ -682,11 +672,9 @@
                                         <div class="pricing-info mb-4">
                                             <ul class="pricing-feature-list list-unstyled">
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> 15
-                                                    Project Environment </li>
+                                                    Project Environments </li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> 15 Users
                                                 </li>
-                                                <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> Agile
-                                                    Project Delivery Management</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> 1 Cloud
                                                     Subscription</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> 1 Code
@@ -697,15 +685,11 @@
                                                     Environment provisioning</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> Email
                                                     Alerts</li>
-                                                <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> IT
-                                                    Service Management</li>
                                                 <li><i
                                                         class="fas fa-circle fa-2xs text-primary me-2"></i>Containerization
                                                 </li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i>Single
                                                     Sign On (SSO)</li>
-                                                <li><i class="fas fa-circle fa-2xs text-primary me-2"></i>Mobile App
-                                                </li>
 
                                             </ul>
                                         </div>
@@ -726,8 +710,7 @@
                                                     Project Environment </li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> 50 Users
                                                 </li>
-                                                <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> Agile
-                                                    Project Delivery Management</li>
+                                                <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> Complementry Agile PM Tool (Kanban)</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> 2 Cloud
                                                     Subscription</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> 2 Code
@@ -740,8 +723,6 @@
                                                     Environment provisioning</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> Email
                                                     Alerts</li>
-                                                <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> IT
-                                                    Service Management</li>
                                                 <li><i
                                                         class="fas fa-circle fa-2xs text-primary me-2"></i>Containerization
                                                 </li>
@@ -749,7 +730,6 @@
                                                     Sign On (SSO)</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i>Mobile App
                                                 </li>
-
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i>
                                                     MultiCloud Brokerage</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> Cloud
@@ -757,7 +737,7 @@
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i>
                                                     Monitoring & Alerting</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> Scaling
-                                                    Infra</li>
+                                                    App Instances</li>
                                             </ul>
                                         </div>
                                         <a href="request-demo.html" class="btn btn-outline-primary mt-2">Contact
@@ -824,7 +804,7 @@
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i>
                                                     Monitoring & Alerting</li>
                                                 <li><i class="fas fa-circle fa-2xs text-primary me-2"></i> Scaling
-                                                    Infra</li>
+                                                    Application Instances</li>
 
 
                                             </ul>
