--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
     <link rel="stylesheet" href="assets/css/custom.css">
     <!--custom css end-->
       <!-- Google tag (gtag.js) -->
+          <!--Google reCaptcha v2-->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-GJ5SBGF06Q"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -781,9 +783,9 @@
                             <!-- <p class="lead">Devozy.ai is an AI-powered self-service IDP platform that delivers from day one, streamlining cloud provisioning, automation, scaling, monitoring, and security boosting productivity 5x and cutting costs 10x.</p> -->
                             <p class="features-list text-white mt-3" style="font-size: 15px; line-height: 2.2;">
                                 ✅ Eliminate DevOps Dependency – The delays from Infra and DevOps teams <br/>
-                                ☁️ Instant Cloud Environments – Full configured across cloud in seconds<br/>
+                                ☁️ Instant Application Environments – Fully configured across clouds in seconds<br/>
                                 ⚙️ Readymade CICD Pipeline –Template for all technologies<br/>
-                                📈 Accelerate Software Delivery –  5x faster, 10x Low cost<br/>
+                                📈 Accelerate Software Delivery –  5x faster, 10x lower the cost<br/>
                               </p>
                               <p class=" text-white mt-2" style="font-size: 15px;" >
                                 🎁 Free 1 Application Environment Setup in –  <b>AWS, Azure, or GCP </b><br/>
@@ -900,22 +902,22 @@ No DevOps. No Scripts. Just Click & Deploy.
                         <div class="icon">
                             <i class="fas fa-cloud-upload-alt"></i>
                           </div>
-                      <h3 class="nowrap">Add Your Cloud Subscriptions</h3>
-                      <p>Supported Cloud AWS, Azure, GCP, Talend</p>
+                      <h3 class="nowrap">Add Cloud Account</h3>
+                      <p>Supported Cloud - AWS, Azure, GCP, Talend</p>
                     </div>
                     <div class="step-card">
                         <div class="icon">
                             <i class="fas fa-code-branch"></i>
                           </div>
-                      <h3>Add Your Code Repository </h3>
-                      <p>Supported Code Repos Github, Gitlab, AzureRepo, BitBucket</p>
+                      <h3>Add Code Repository </h3>
+                      <p>Supported Code Repos - Github, Gitlab, AzureRepo, BitBucket</p>
                     </div>
                     <div class="step-card">
                         <div class="icon">
                             <i class="fas fa-shipping-fast"></i>
                           </div>
                       <h3>Get your Software Shipped </h3>
-                      <p>Simple steps to create your CICD pipeline and app environment</p>
+                      <p>Simple steps to create your CICD pipeline and app environments in secs</p>
                     </div>
                   </div>
               
@@ -929,7 +931,7 @@ No DevOps. No Scripts. Just Click & Deploy.
         <section>
           <div class="container">
     <div  class="row justify-content-center text-center">   
-        <h3 style=" margin-top:70px; margin-bottom:40px" >Effortless Cloud Integration & Deployment</h3>
+        <h3 style=" margin-top:70px; margin-bottom:40px" >Make your app live in few hours across any cloud</h3>
         <div class="devworkflow_steps_container">
             <div class="devworkflow_step devworkflow_step1">
                 <div class="devworkflow_step_content">
@@ -938,8 +940,9 @@ No DevOps. No Scripts. Just Click & Deploy.
                         <h1 class="display-5">Seamlessly connect your cloud accounts.</h1>
                     </div>
                     <p class="body-md">
-                        Link your AWS accounts, GCP projects, Azure subscriptions, and Talend subscriptions effortlessly in minutes.
+                        Link your AWS / GCP / Azure / Talend subscriptions effortlessly in secs.
                     </p>
+                    <p class="new_description tag_text is-purple"> I don't think so it is that much easy! Hmm. Working! </p>
                 </div>
                 <div class="devworkflow_step_img_wrapper">
                     <img src="connect-illustration.png" 
@@ -960,22 +963,24 @@ No DevOps. No Scripts. Just Click & Deploy.
                 </div>
                 <div class="devworkflow_step_content">
                     <div class="devworkflow_step_title">
-                        <p class="new_description tag_text is-green">Build</p>
-                        <h1 class="display-5">Cloud-Ready CI/CD Pipelines Made Easy</h1>
+                        <p class="new_description tag_text is-green">Provision</p>
+                        <h1 class="display-5">Create CI/CD Pipeline and Application runtime using readymade automations</h1>
                     </div>
                     <p class="body-md">
-                        Create seamless code build pipeline in Jenkins & Cloud native CI tools (AWS, GCP, Azure)
+                        Create seamless CI/CD pipeline using Jenkins or any Cloud native CI tools (AWS, GCP, Azure)
                     </p>
+                    <p class="new_description tag_text is-purple"> Wow! You have saved lot of time and money. </p>
                 </div>
             </div>
             <div class="devworkflow_step devworkflow_step1">
                 <div class="devworkflow_step_content">
                     <div class="devworkflow_step_title">
-                        <p class="new_description tag_text is-purple">Deploy</p>
-                        <h1 class="display-5">Deployment with Cloud-Native Solutions</h1>
+                        <p class="new_description tag_text is-purple">Run</p>
+                        <h1 class="display-5">Deploy your app using Cloud Native Solutions</h1>
                     </div>
                     <p class="body-md">
-                        Provision app runtime platform  using cloud native solutions such as virtual machines, container service, kubernetes service.
+                        Instant creation of app runtime platform using cloud native solutions such as virtual machines, container service, kubernetes service. 
+                        <p class="new_description tag_text is-purple"> Hurray! You are live. </p>
                     </p>
                 </div>
                 <div class="devworkflow_step_img_wrapper">
@@ -1020,7 +1025,7 @@ No DevOps. No Scripts. Just Click & Deploy.
               <ul class="list-unstyled">
                 <li> <i class="far fa-check-circle me-2 text-primary"></i>Security- Sonarqube, Synk scans in build pipeline</li>
                 <li> <i class="far fa-check-circle me-2 text-primary"></i>Testing - unit tesing, functional execution in build pipeline</li>
-                <li> <i class="far fa-check-circle me-2 text-primary"></i>Scaling - high availability - instant scaling of app instances</li>
+                <li> <i class="far fa-check-circle me-2 text-primary"></i>Scaling - up/down - instant scaling of app instances</li>
                 </ul>
               </ul>
               <!-- <button class="start-button">Start with GCP</button> -->
@@ -1034,7 +1039,7 @@ No DevOps. No Scripts. Just Click & Deploy.
       <div class="features-header">
         <h2>Why Choose Devozy.ai?</h2>
         <p>
-            Your developers build fast — Devozy.ai makes it faster. Eliminate Infra/DevOps delays and accelerate time to market. Ideal for startups.
+            Your developers code fast — Devozy.ai automates "Faster Time to Market" by eliminating the Infra/DevOps dependencies & delays. Perfect for startups.
         </p>
       </div>
   
@@ -1073,7 +1078,7 @@ No DevOps. No Scripts. Just Click & Deploy.
             <!-- <button onclick="window.location.href='#'" class="primary-btn">
             Sign Up Free – Get 3 Tailored CVs
             </button> -->
-        <button onclick="window.location.href='javascript:void(0);'" data-bs-toggle="modal" data-bs-target="#devozyTrialModal"name="getdevozyfree" type="submit" class="btn btn-primary" style="background-color: #F154FF;border-color: #F154FF;">  Sign Up Free - Get One Free Environment
+        <button onclick="window.location.href='javascript:void(0);'" data-bs-toggle="modal" data-bs-target="#devozyTrialModal"name="getdevozyfree" type="submit" class="btn btn-primary" style="background-color: #F154FF;border-color: #F154FF;">  Sign Up - Get One Free Environment
         </button>
       </div>
     </div>
@@ -1178,7 +1183,11 @@ No DevOps. No Scripts. Just Click & Deploy.
               <label for="trialEmail"  class="form-label">Work Email</label>
               <input type="email" id="email" class="form-control" id="trialEmail" required>
             </div>
+            <!-- added recaptcha-->
+            <div class="g-recaptcha" data-sitekey="6LfSD2MqAAAAALEqUAkqDns42LCDBYeiNSwt70jm"></div>
+            <div class="mb-3">
             <button onclick="go(event)" type="submit" class="btn btn-primary w-100">Submit Request</button>
+            </div>            
           </form>
         </div>
       </div>
@@ -1358,9 +1367,9 @@ No DevOps. No Scripts. Just Click & Deploy.
                     <div class="col-lg-8 col-md-10">
                         <div class="subscribe-info-wrap text-center position-relative z-2">
                             <div class="section-heading" data-aos="fade-up">
-                                <h4 class="h5 text-warning">Let's Talk! Request for a Demo!</h4>
-                                <h2>Start Your 30 Days Free Trial</h2>
-                                <p> Experience the power of DEVOZY's expertise today.</p>
+                                <h4 class="h5 text-warning">Let's talk with free platform demo!</h4>
+                                <h2>Start your free subscription post the demo</h2>
+                                <p> You get one app environment with 3 continuous deployment (monthly) free</p>
                             </div>
                             <div class="form-block-banner mw-60 m-auto mt-5" data-aos="fade-up" data-aos-delay="50">
                                 <a href="request-demo.html" class="btn btn-primary">Book a Demo</a>
@@ -1370,7 +1379,7 @@ No DevOps. No Scripts. Just Click & Deploy.
                             <ul class="nav justify-content-center subscribe-feature-list mt-4" data-aos="fade-up"
                                 data-aos-delay="100">
                                 <li class="nav-item">
-                                    <span><i class="far fa-check-circle text-primary me-2"></i>Free 30-days trial</span>
+                                    <span><i class="far fa-check-circle text-primary me-2"></i>Enquire us for free subscription</span>
                                 </li>
                                 <li class="nav-item">
                                     <span><i class="far fa-check-circle text-primary me-2"></i>No credit card
