--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@ No DevOps. No Scripts. Just Click & Deploy.
                 <div class="container">
                   <div class="text-center">
                     <h2 class="heading">How It Works</h2>
-                    <p class="subheading">Three simple steps to ship your software into any cloud</p>
+                    <p class="subheading">3 simple steps to ship your software into any cloud (AWS, Azure, GCP)</p>
                   </div>
               
                   <div class="steps">
@@ -942,7 +942,7 @@ No DevOps. No Scripts. Just Click & Deploy.
                     <p class="body-md">
                         Link your AWS / GCP / Azure / Talend subscriptions effortlessly in secs.
                     </p>
-                    <p class="new_description tag_text is-purple"> I don't think so it is that much easy! Hmm. Working! </p>
+                    <p class="new_description tag_text is-purple"> I don't think so it is that much easy! Yay. Working! </p>
                 </div>
                 <div class="devworkflow_step_img_wrapper">
                     <img src="connect-illustration.png" 
@@ -1369,7 +1369,7 @@ No DevOps. No Scripts. Just Click & Deploy.
                             <div class="section-heading" data-aos="fade-up">
                                 <h4 class="h5 text-warning">Let's talk with free platform demo!</h4>
                                 <h2>Start your free subscription post the demo</h2>
-                                <p> You get one app environment with 3 continuous deployment (monthly) free</p>
+                                <p> You get one application hosted into cloud with monthly 3 continuous deployment free</p>
                             </div>
                             <div class="form-block-banner mw-60 m-auto mt-5" data-aos="fade-up" data-aos-delay="50">
                                 <a href="request-demo.html" class="btn btn-primary">Book a Demo</a>
