--- a/pricing-plans.html
+++ b/pricing-plans.html
@@ -318,7 +318,7 @@
                                             </div>
                                         </div>
                                     </li>
-                        <li><a href="#" class="nav-link">Plan</a></li>
+                        <li><a href="#" class="nav-link">Plans</a></li>
                     </ul>
 
 
@@ -575,7 +575,7 @@
                                         </div>
                                     </div>
                                 </li>
-                    <li><a href="#" class="nav-link">Plan</a></li>
+                    <li><a href="#" class="nav-link">Plans</a></li>
                 </ul>
 
                 <div class="action-btns mt-4 ps-3">
@@ -880,7 +880,7 @@
                                             <li><a href="#premium_devozy_feature"
                                                     class="text-decoration-none">Features</a></li>
                                             <li><a href="#devozy" class="text-decoration-none">Devozy</a></li>
-                                            <li><a href="#Pricing" class="text-decoration-none">Plan</a></li>
+                                            <li><a href="#Pricing" class="text-decoration-none">Plans</a></li>
                                             <li><a href="#review" class="text-decoration-none">Testimonial</a>
                                             </li>
                                             <li><a href="request-demo.html" class="text-decoration-none">Get free
