--- a/request-demo.html
+++ b/request-demo.html
@@ -344,7 +344,7 @@
                                                 </div>
                                             </div>
                                         </li>
-                            <li><a href="#Pricing" class="nav-link">Pricing</a></li>
+                            <li><a href="pricing-plans.html" class="nav-link">Plans</a></li>
                         </ul>
 
 
@@ -600,7 +600,7 @@
                                             </div>
                                         </div>
                                     </li>
-                        <li><a href="pricing-plans.html" class="nav-link">Pricing</a></li>
+                        <li><a href="pricing-plans.html" class="nav-link">Plans</a></li>
                     </ul>
 
                 </div>
@@ -613,24 +613,17 @@
             style="background: url('assets/img/page-header-bg.svg')no-repeat bottom right">
             <div class="container">
                 <div class="row justify-content-center text-center">
-                    <div class="col-xl-8 col-lg-10 mb-5">
+                    <div class="col-xl-8 col-lg-10">
                         <div class="hero-content-wrap">
-                            <h1 class="fw-bold text-dark display-5"> Experience the all new world class <span class="text-primary">AI Assisted</span> Developer Self Service Platform (IDP) - an Platform Engineering Solution</h1>
-                            <p>Unlock the power of innovation - The modern software delivery platform & Developer Experience Unleashed. Witness how our
-                                technology can transform your business. Request a personalized demo now and embark on a
-                                journey to redefine possibilities.</p>
+                            <h1 class="fw-bold text-dark display-5"> Fill out the form and we'll be in touch as soon as possible. </h1>                              
                             <hr>
-
+                            <p class="h5 text-warning"> You get one application hosted into cloud with monthly 3 continuous deployments free</p>
                         </div>
                     </div>
                     <div class="col-xl-5 col-lg-7 col-md-12 order-0 order-lg-1">
                         <div class="register-wrap p-5 bg-white shadow rounded-custom mt-5 mt-lg-0 mt-xl-0">
-                            <h3 class="fw-medium h4">Fill out the form and we'll be in touch as soon as possible.</h3>
-
                             <form class="mt-4 register-form">
                                 <!-- <input type="hidden" name="_next" value="https://devozy.ai/thankyou.html"> -->
-
-
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="input-group mb-3">
